--- a/css/all.css
+++ b/css/all.css
@@ -7,3 +7,29 @@
 .commonFormat::before{
     margin-top: -200px;
 }
+
+.menulist li{
+    padding: 0 1rem;
+}
+.menulist li::after{
+    content: "";
+    display: block;
+    width: 0%;
+    height: 2px;
+    background-color: #0d6efd;
+    transition: .3s .2s;
+}
+.menulist li:hover::after{
+    width: 100%;
+}
+
+.footer{
+    position: absolute;
+    z-index: 2000;
+}
+
+.secondmenu{
+    overflow: auto ;
+    height: 100%;
+    margin-bottom: 360px;
+}
