--- a/css/all.css
+++ b/css/all.css
@@ -51,6 +51,10 @@
     max-height: 300px;
 }
 
+.google iframe{
+    margin-top: 100px;
+}
+
 @media (max-width: 576px) {
     .plugin .secondmenu{
         position: relative;
