埋估狗代碼

--- a/css/all.css
+++ b/css/all.css
@@ -18,7 +18,7 @@
     display: block;
     width: 0%;
     height: 2px;
-    background-color: #0d6efd;
+    background-color: #92a7c7;
     transition: .2s .1s;
 }
 .menulist li:hover::after{
