--- a/css/index.css
+++ b/css/index.css
@@ -31,13 +31,15 @@
 }
 .downloadbtn::before {
   top: 0; right: 0;
-  border-top: 1px solid rgb(28, 31, 30);
-  border-left: 1px solid rgb(28, 31, 30);
+  border-top: 1px solid rgba(28, 31, 30, 0.36 );
+  border-left: 1px solid rgba(28, 31, 30, 0.36 );
+  mix-blend-mode: multiply;
 }
 .downloadbtn::after {
   bottom: 0; left: 0;
-  border-bottom: 1px solid rgb(28, 31, 30);
-  border-right: 1px solid rgb(28, 31, 30);
+  border-bottom: 1px solid rgba(28, 31, 30, 0.36 );
+  border-right: 1px solid rgba(28, 31, 30, 0.36);
+  mix-blend-mode: multiply;
 }
 .downloadbtn:hover::before,
 .downloadbtn:hover::after {
@@ -48,6 +50,17 @@
 
 .cn{
     background-image: linear-gradient(38deg, #c9c9c9 0%, #b1b1b1 100%);
+}
+
+:target:before {
+    content: "";
+    display: block;
+    height: 0px;
+    width: 100%;
+}
+.commonFormat::before{
+    margin-top: 0px;
+    display: block;
 }
 
 @media (max-width: 576px) {
