--- a/css/all.css
+++ b/css/all.css
@@ -41,6 +41,7 @@
 
 
 .imagebig img{
+    max-width: 100%;
     max-height: 2000px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
