--- a/css/all.css
+++ b/css/all.css
@@ -1,3 +1,16 @@
+.scroll_top{
+    display: block;
+    position: fixed;
+    z-index: 2500;
+    right: 1.5rem;
+    bottom: 1rem;
+    font-size: 3rem;
+    color: #c7c7c7;
+}
+.scroll_top:hover{
+    color: #92a7c7;
+}
+
 :target:before {
     content: "";
     display: block;
