--- a/css/all.css
+++ b/css/all.css
@@ -52,7 +52,7 @@
     margin-bottom: 360px;
 }
 
-
+/* 插件頁面圖片 */
 .imagebig img{
     max-width: 100%;
     max-height: 2000px;
@@ -83,6 +83,33 @@
 }
 .tweak_table table tr td:nth-child(2){
     color: #6781a9;
+}
+
+/* 插件code */
+.table code{
+    word-break: break-all;
+    display: block;
+    overflow: auto;
+    height: 8rem;
+}
+.codeclip{
+    position: relative;
+}
+.codeclip button{
+    position: absolute;
+    top: 1px;
+    right: 17px;
+    background: #ffffffc9;
+    border: none;
+    display: none;
+
+}
+.codeclip button .bi{
+    font-size: 1.5em;
+}
+.codeclip .clipicon_show{
+    display: flex;
+    align-items: center;
 }
 
 @media (max-width: 576px) {
