--- a/css/_menu.scss
+++ b/css/_menu.scss
@@ -49,6 +49,79 @@
             padding: 0.5em 1em;
         }
     }
+    .hamburger1{
+        .line{
+        width: 35px;
+        height: 3px;
+        background-color: #6781a9;
+        border: none;
+        display: block;
+        margin: 8px auto;
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        }
+    }
+    .hamburger1:hover{
+        cursor: pointer;
+    }
+    .navbar-light .navbar-toggler{
+        border: none;
+        color: transparent;
+    }
+    .navbar-light .navbar-toggler:focus{
+        box-shadow: 0 0 0 0.1rem;
+    }
+    #hamburger{
+        position: relative;
+        -webkit-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+    }
+      
+    #hamburger.is-active{
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        -o-transform: rotate(45deg);
+        transform: rotate(45deg);
+    }
+      
+    // #hamburger:before{
+    //     content: "";
+    //     position: absolute;
+    //     -webkit-box-sizing: border-box;
+    //     -moz-box-sizing: border-box;
+    //     box-sizing: border-box;
+    //     width: 70px;
+    //     height: 70px;
+    //     border: 5px solid transparent;
+    //     top: calc(50% - 35px);
+    //     left: calc(50% - 35px);
+    //     border-radius: 100%;
+    //     -webkit-transition: all 0.3s ease-in-out;
+    //     -o-transition: all 0.3s ease-in-out;
+    //     transition: all 0.3s ease-in-out;
+    // }
+      
+    #hamburger.is-active:before{
+        border: 3px solid #ecf0f1;
+    }
+      
+    #hamburger.is-active .line{
+        width: 35px;
+    }
+      
+    #hamburger.is-active .line:nth-child(2){
+        opacity: 0;
+    }
+      
+    #hamburger.is-active .line:nth-child(1){
+        transform: translateY(11px);
+    }
+      
+    #hamburger.is-active .line:nth-child(3){
+        transform: translateY(-11px) rotate(90deg);
+    }
 }
 // 插件頁面次選單
 $accordion-button-active-color:#6781a9;
