--- a/css/_hashJump.scss
+++ b/css/_hashJump.scss
@@ -4,7 +4,7 @@
     height: 200px;
     width: 100%;
     }
-.commonFormat::before ,.tweakFormat::before ,.indexFixFormat::before{
+.commonFormat::before ,.tweakFormat::before ,.indexFixFormat::before ,.thirdplugin::before{
     margin-top: -200px;
 }
 // 首頁卡片不要高
