--- a/css/_plugin.scss
+++ b/css/_plugin.scss
@@ -51,16 +51,20 @@ body {
         box-shadow: transparent;
     }
 }
-@media (max-width: 767px){
-    .secondmenu{
-        height: auto;
-        position: unset;
-    }
-}
-
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link{
     background-color: #4c72ad;
 }
 .nav-link{
     color: #629ffa;
+}
+.alert-secondary{
+    word-wrap: break-word;
+}
+
+
+@media (max-width: 767px){
+    .secondmenu{
+        height: auto;
+        position: unset;
+    }
 }
