--- a/css/all-sc.css
+++ b/css/all-sc.css
@@ -43,8 +43,8 @@
 
 @media (max-width: 991px) {
   .tooTop {
-    -webkit-box-shadow: 0px 2px 3px 0px rgba(139, 139, 139, 0.5607843137);
-            box-shadow: 0px 2px 3px 0px rgba(139, 139, 139, 0.5607843137);
+    -webkit-box-shadow: 0px 2px 3px 0px #8b8b8b8f;
+            box-shadow: 0px 2px 3px 0px #8b8b8b8f;
   }
 
   .menulist .dropdown-menu {
@@ -415,7 +415,7 @@ body {
 }
 .secondmenu::-webkit-scrollbar-thumb {
   border-radius: 4px;
-  background-color: rgba(146, 167, 199, 0.431372549);
+  background-color: #92a7c76e;
   border: none;
 }
 .secondmenu::-webkit-scrollbar-track {
@@ -423,12 +423,6 @@ body {
           box-shadow: transparent;
 }
 
-@media (max-width: 767px) {
-  .secondmenu {
-    height: auto;
-    position: unset;
-  }
-}
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
   background-color: #4c72ad;
 }
@@ -437,6 +431,16 @@ body {
   color: #629ffa;
 }
 
+.alert-secondary {
+  word-wrap: break-word;
+}
+
+@media (max-width: 767px) {
+  .secondmenu {
+    height: auto;
+    position: unset;
+  }
+}
 .google iframe {
   margin-top: 100px;
 }
