--- a/css/all-sc.css
+++ b/css/all-sc.css
@@ -384,7 +384,7 @@ body {
   transition: all 0.5s ease;
 }
 .imagebig .imagebigback {
-  max-height: 300px;
+  max-height: auto;
 }
 
 .tweaktitle {
@@ -447,6 +447,7 @@ body {
 
 .healer:hover {
   background-color: #377e4f;
+  border-color: #5a9b70;
 }
 
 .healer:focus {
@@ -454,6 +455,23 @@ body {
   border-color: #137333;
   -webkit-box-shadow: 0 0 0 0.25rem rgba(132, 197, 131, 0.25);
           box-shadow: 0 0 0 0.25rem rgba(132, 197, 131, 0.25);
+}
+
+.dps {
+  background-color: #db4848;
+  border-color: #b71919;
+}
+
+.dps:hover {
+  background-color: #c92626;
+  border-color: #bd1d1d;
+}
+
+.dps:focus {
+  background-color: #c92626;
+  border-color: #bd1d1d;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(197, 131, 131, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(197, 131, 131, 0.25);
 }
 
 @media (max-width: 767px) {
