新增網站更新公告&修一下次選單太上層的問題

--- a/css/_index.scss
+++ b/css/_index.scss
@@ -37,6 +37,12 @@
     background: #f1f1f1;
     mix-blend-mode: multiply;
 }
+// 更新日誌
+.update{
+    color: #6781a9;
+    background-color: aliceblue;
+    border-radius: 5px;
+}
 
 @media (max-width: 576px){
     .card .list-group-item a{
