完善修改與新增插件功能

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,4 +33,7 @@
     .list {
         @apply grid transition cursor-pointer hover:bg-gray-100 first:rounded-t last:rounded-b;
     }
+    .card {
+        @apply bg-white border border-solid border-gray-300 rounded divide-y;
+    }
 };
