--- a/src/assets/scss/_menu.scss
+++ b/src/assets/scss/_menu.scss
@@ -17,7 +17,31 @@
     a:hover::after{
         width: 100%;
     }
-    .dropdown::after {
-        content: none;
+}
+
+// 漢堡選單
+.mobileMenu {
+    span {
+        display: block;
+        margin: 6px auto;
+        background-color: #92a7c7;
+        width: 100%;
+        height: 3px;
+        border-radius: 5px;
+        transition: all .5s ease;
+    }
+}
+// 漢堡展開動畫
+.mobileMenu.is-opened {
+    span:first-child {
+        transform: translateY(9px) rotate(45deg);
+    }
+
+    span:nth-child(2) {
+        transform: scaleX(0);
+    }
+
+    span:last-child {
+        transform: translateY(-9px) rotate(-45deg);
     }
 }
