--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -49,6 +49,12 @@
     .pluginContent h1 {
         @apply text-2xl;
     }
+    .pluginContent p {
+        @apply mb-2;
+    }
+    .pluginContent code {
+        @apply text-red-600 bg-gray-200 px-2 py-0.5 rounded;
+    }
 
     .btn {
         @apply px-6 py-3 rounded-xl transition;
